src/objects/OnlineApplicationOffer__c.object
<CustomObject>
    <description>Forseva Online Application Project</description>
    <fields>
        <fullName>ATM_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sent to EFS App Manager</description>
        <label>ATM Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Descriptor__c</fullName>
        <description>sent as mgr_code in app manager integration</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Descriptor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Text__c</fullName>
        <description>This is additional text that would appear on the welcome letter.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This is additional text that would appear on the welcome letter.</inlineHelpText>
        <label>Additional Text</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agent_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Agent Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Always_Require_DOT_FF_MC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Always Require DOT/FF/MC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Application Title</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Type__c</fullName>
        <description>Sent to App Manager as ApprovalType</description>
        <label>Approval Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Letter Type</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Authorized_Signer_Disclosure__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Authorized Signer Disclosure</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Auto_Creation_Email_Template__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Used when an eApp is auto-created upon entry of certain kinds of web-to-lead form Leads</inlineHelpText>
        <label>Auto Creation Email Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_Billing_Cycles__c</fullName>
        <label>Available Billing Cycles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily – 7-Day Terms</fullName>
                </value>
                <value>
                    <fullName>Daily – 0-Day Terms</fullName>
                </value>
                <value>
                    <fullName>Daily – 1-Day Terms</fullName>
                </value>
                <value>
                    <fullName>Daily – 2-Day Terms</fullName>
                </value>
                <value>
                    <fullName>Daily – 3-Day Terms</fullName>
                </value>
                <value>
                    <fullName>Daily – 4-Day Terms</fullName>
                </value>
                <value>
                    <fullName>Daily – 5 Day Terms</fullName>
                </value>
                <value>
                    <fullName>Daily – 6 Day Terms</fullName>
                </value>
                <value>
                    <fullName>Weekly – 1-Day Terms</fullName>
                </value>
                <value>
                    <fullName>Weekly – 2 Day Terms</fullName>
                </value>
                <value>
                    <fullName>Weekly – 3-Day Terms</fullName>
                </value>
                <value>
                    <fullName>Per Transaction – 30-Day Terms</fullName>
                </value>
                <value>
                    <fullName>Prepay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Available_Funding_Options__c</fullName>
        <description>Options on how to use the credit card that are available to offer the applicant</description>
        <label>Available Funding Options</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACH Transfer</fullName>
                </value>
                <value>
                    <fullName>ATM</fullName>
                </value>
                <value>
                    <fullName>Debit Use</fullName>
                </value>
                <value>
                    <fullName>Register Check</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Available_Payment_Methods__c</fullName>
        <label>Available Payment Methods</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Auto Draft</fullName>
                </value>
                <value>
                    <fullName>Internet Pay</fullName>
                </value>
                <value>
                    <fullName>Faxed Electronichek</fullName>
                </value>
                <value>
                    <fullName>Wire</fullName>
                </value>
                <value>
                    <fullName>Customer Initiated ACH</fullName>
                </value>
                <value>
                    <fullName>Mailed Check</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Available_Prepay_Payment_Methods__c</fullName>
        <label>Available Prepay Payment Methods</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer ACH</fullName>
                </value>
                <value>
                    <fullName>Wire</fullName>
                </value>
                <value>
                    <fullName>Western Union</fullName>
                </value>
                <value>
                    <fullName>Auto Draft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BOCA_Default_Offer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BOCA Default Offer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bank_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bank Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Cycle__c</fullName>
        <inlineHelpText>How often would you prefer to be invoiced?</inlineHelpText>
        <label>Billing Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Daily - 7-Day Terms</fullName>
                </value>
                <value>
                    <fullName>Daily – 30 Day Terms</fullName>
                </value>
                <value>
                    <fullName>Weekly - 7-Day Terms</fullName>
                </value>
                <value>
                    <fullName>Weekly - 14-Day Terms</fullName>
                </value>
                <value>
                    <fullName>Bi-Weekly - 7-Day Terms</fullName>
                </value>
                <value>
                    <fullName>Monthly - 14-Day Terms</fullName>
                </value>
                <value>
                    <fullName>Prepay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Branch_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Branch Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bypass_Card_Setup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Card Setup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_Partner_On_Confirmation_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CC Partner On Confirmation Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Card_Order_Type__c</fullName>
        <description>Sent to EFS App Manager as</description>
        <label>Card Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>35</fullName>
                </value>
                <value>
                    <fullName>36</fullName>
                </value>
                <value>
                    <fullName>31</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>51</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Card_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Card Program</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Online Application Offers</relationshipLabel>
        <relationshipName>Online_Application_Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Card_Shipping_Method__c</fullName>
        <description>Sent to EFS App Manager as</description>
        <label>Card Shipping Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>72</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Card_Style__c</fullName>
        <description>Sent to EFS App Manager as card_style</description>
        <label>Card Style</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>35</fullName>
                </value>
                <value>
                    <fullName>36</fullName>
                </value>
                <value>
                    <fullName>38</fullName>
                </value>
                <value>
                    <fullName>43</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>97</fullName>
                </value>
                <value>
                    <fullName>114</fullName>
                </value>
                <value>
                    <fullName>118</fullName>
                </value>
                <value>
                    <fullName>122</fullName>
                </value>
                <value>
                    <fullName>139</fullName>
                </value>
                <value>
                    <fullName>159</fullName>
                </value>
                <value>
                    <fullName>182</fullName>
                </value>
                <value>
                    <fullName>198</fullName>
                </value>
                <value>
                    <fullName>200</fullName>
                </value>
                <value>
                    <fullName>201</fullName>
                </value>
                <value>
                    <fullName>202</fullName>
                </value>
                <value>
                    <fullName>203</fullName>
                </value>
                <value>
                    <fullName>204</fullName>
                </value>
                <value>
                    <fullName>205</fullName>
                </value>
                <value>
                    <fullName>206</fullName>
                </value>
                <value>
                    <fullName>207</fullName>
                </value>
                <value>
                    <fullName>208</fullName>
                </value>
                <value>
                    <fullName>209</fullName>
                </value>
                <value>
                    <fullName>210</fullName>
                </value>
                <value>
                    <fullName>211</fullName>
                </value>
                <value>
                    <fullName>212</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Card_Type__c</fullName>
        <description>Sent to EFS App Manager as card_type</description>
        <label>Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>42</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cards_per_1_Requested__c</fullName>
        <description>Used for specific programs who want to send additional cards to the customer.</description>
        <inlineHelpText>Used to order additional cards for specific programs

Example:
Number of Cards (Online App): 5 |
# of Cards per 1 Requested: 2 |
Number of Cards sent to LLC = 10</inlineHelpText>
        <label># of Cards per 1 Requested</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cash_Limit__c</fullName>
        <label>Cash Limit</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Child_Funded_Issuer_ID__c</fullName>
        <description>Sent to EFS App Manager as Child_Funded_Issuer_ID</description>
        <label>Child Funded Issuer ID</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>100000</fullName>
                </value>
                <value>
                    <fullName>105757</fullName>
                </value>
                <value>
                    <fullName>113301</fullName>
                </value>
                <value>
                    <fullName>118897</fullName>
                </value>
                <value>
                    <fullName>140187</fullName>
                </value>
                <value>
                    <fullName>141905</fullName>
                </value>
                <value>
                    <fullName>143039</fullName>
                </value>
                <value>
                    <fullName>144496</fullName>
                </value>
                <value>
                    <fullName>151674</fullName>
                </value>
                <value>
                    <fullName>155189</fullName>
                </value>
                <value>
                    <fullName>189984</fullName>
                </value>
                <value>
                    <fullName>194133</fullName>
                </value>
                <value>
                    <fullName>194134</fullName>
                </value>
                <value>
                    <fullName>194135</fullName>
                </value>
                <value>
                    <fullName>194136</fullName>
                </value>
                <value>
                    <fullName>194143</fullName>
                </value>
                <value>
                    <fullName>194147</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complete_Later_Email_From__c</fullName>
        <defaultValue>&quot;Fleet One&quot;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>On Behalf of email name for &quot;complete later&quot; email to customer.</inlineHelpText>
        <label>Complete Later Email From</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complete_Later_Email_Title__c</fullName>
        <defaultValue>&quot;Fleet One Online Application Instructions&quot;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Title of &apos;complete later&apos; email sent to customer.</inlineHelpText>
        <label>Complete Later Email Title</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complete_Later_Email__c</fullName>
        <defaultValue>$Label.CompleteLaterEmail</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The text contained in the &quot;complete later&quot; email sent to customer.</inlineHelpText>
        <label>Complete Later Email</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complete_Later_Text__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The text served to the customer if they click the &quot;Save and Complete Later&quot; button.</inlineHelpText>
        <label>Complete Later Text</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complete_Later_Url_Label__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The text displayed for the Complete Later Url.  (Optional)</inlineHelpText>
        <label>Complete Later Url Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complete_Later_Url__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The URL provided as a link on the page served to the customer when the &quot;Save and Complete Later&quot; button is pressed.  (Optional)</inlineHelpText>
        <label>Complete Later Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Create_Letter__c</fullName>
        <description>Sent to App Manager as CreateLetter</description>
        <label>Create Letter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ACH Debit</fullName>
                </value>
                <value>
                    <fullName>Emanager Letter</fullName>
                </value>
                <value>
                    <fullName>Wire/ACH Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Limit_Per_Truck_Slip_Seat__c</fullName>
        <label>Credit Limit Per Truck - Slip Seat</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Limit_Per_Truck__c</fullName>
        <label>Credit Limit Per Truck</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Review_Path__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Used to drive down standard or custom review paths</description>
        <label>Credit Review Path</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <description>Sent to EFS App Manager as</description>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>31</fullName>
                </value>
                <value>
                    <fullName>34</fullName>
                </value>
                <value>
                    <fullName>35</fullName>
                </value>
                <value>
                    <fullName>36</fullName>
                </value>
                <value>
                    <fullName>37</fullName>
                </value>
                <value>
                    <fullName>38</fullName>
                </value>
                <value>
                    <fullName>39</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Daily_Cash_Limit__c</fullName>
        <description>Sent to EFS in App Manager payload</description>
        <label>Daily Cash Limit</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Daily_MC_Limit__c</fullName>
        <description>Sent to EFS App Manager</description>
        <label>Daily MC Limit</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Disclosure__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Disclosure</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EchoSign_Header_Image__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This URL must be externally accessible and point to an image file.  It must be served via HTTPS.  It appears on the EchoSign document and the frame-less presentation of the application.</inlineHelpText>
        <label>EchoSign Header Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EchoSign_User_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This must be the email (login ID) for a valid user associated with your EchoSign account.</inlineHelpText>
        <label>EchoSign User Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Template_Link__c</fullName>
        <description>Used in the VF Email Template to bring this URL onto the email out to the end user under the &quot;Click Here&quot; hyperlink</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Used in the VF Email Template to bring this URL onto the email out to the end user under the &quot;Click Here&quot; hyperlink</inlineHelpText>
        <label>Email Template Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Email_Template_Logo__c</fullName>
        <description>This is the ID of the Document where the logo has been uploaded. For Example, the URL for Fleet One Logo 3 is https://cs7.salesforce.com/01570000001M4x4 and the ID is 01570000001M4x4. Plug just the ID in to this field.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This is the ID of the Document where the logo has been uploaded. For Example, the URL for Fleet One Logo 3 is https://cs7.salesforce.com/01570000001M4x4 and the ID is 01570000001M4x4. Plug just the ID in to this field.</inlineHelpText>
        <label>Email Template Logo ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_Authorized_Contacts__c</fullName>
        <defaultValue>true</defaultValue>
        <description>For Fleet Enrollment - Enable the collection of authorized contact information</description>
        <inlineHelpText>For Fleet Enrollment - Enable the collection of authorized contact information</inlineHelpText>
        <label>Enable Authorized Contacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_BOCDD_for_Parent_funded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>https://jira.devtools.wexinc.com/browse/PSOBACKLOG-249</description>
        <inlineHelpText>Funding must be Parent Funded</inlineHelpText>
        <label>Enable BOCDD for Parent funded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Card_Information__c</fullName>
        <defaultValue>true</defaultValue>
        <description>For Fleet Enrollment - Enable the collection of card information</description>
        <inlineHelpText>For Fleet Enrollment - Enable the collection of card information</inlineHelpText>
        <label>Enable Card Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Driver_Unit_Information__c</fullName>
        <defaultValue>true</defaultValue>
        <description>For Fleet Enrollment, this enables the collection of driver and unit information.</description>
        <inlineHelpText>For Fleet Enrollment, this enables the collection of driver and unit information.</inlineHelpText>
        <label>Enable Driver/Unit Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Parent_Funded_Banking_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the funding is &quot;Parent&quot;, this allows the banking information to still be collected.</description>
        <label>Enable Parent Funded Banking Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Promotional_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable Promo Code Input</description>
        <label>Enable Promotional Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Faxed_Check_Fee_Disclosure__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Displayed to user when they select Faxed ElectroniChek as a Payment Method.</inlineHelpText>
        <label>Faxed Check Fee Disclosure</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding__c</fullName>
        <label>Funding</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Child Funded</fullName>
                </value>
                <value>
                    <fullName>Dual Funded</fullName>
                </value>
                <value>
                    <fullName>Parent Funded</fullName>
                    <default>true</default>
                    <label>Parent Funded</label>
                </value>
                <value>
                    <fullName>Parent Funded &amp; Secondary Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hide_Card_Setup_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Never show card setup page.</inlineHelpText>
        <label>Hide Card Setup Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issuer_Group__c</fullName>
        <description>Sent to EFS App Manager as</description>
        <label>Issuer Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Large_Fleet_Completion_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Large Fleet Completion Message</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <inlineHelpText>This field will be read-only on the application if selected here.</inlineHelpText>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brochure</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Existing SFDC Record</fullName>
                </value>
                <value>
                    <fullName>External Data Source</fullName>
                </value>
                <value>
                    <fullName>Facebook/LinkedIn/Twitter</fullName>
                </value>
                <value>
                    <fullName>Internet/Website</fullName>
                </value>
                <value>
                    <fullName>Letter/Postcard</fullName>
                </value>
                <value>
                    <fullName>Magazine Ad</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Phone Call</fullName>
                </value>
                <value>
                    <fullName>Private Label</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Self Generated Source</fullName>
                </value>
                <value>
                    <fullName>Telemarketing</fullName>
                </value>
                <value>
                    <fullName>Tradeshow</fullName>
                </value>
                <value>
                    <fullName>TruckSign/StoreSign</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Limit_Method__c</fullName>
        <description>Sent to EFS in the App Manager Payload</description>
        <label>Limit Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Limit</fullName>
                </value>
                <value>
                    <fullName>Daily Limit</fullName>
                </value>
                <value>
                    <fullName>Less of Daily and Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MC_Limit__c</fullName>
        <description>Sent to EFS App Manager</description>
        <label>MC Limit</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>